--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,30 @@ HDproject/Library/
 HDproject/.vsconfig
 HDproject/Assets/ExternalDependencyManager
 HDproject/Assets/Firebase/
-HDproject/Assets/Photon
-HDproject/Assets/Settings
-HDproject/Assets/Packages
+HDproject/Assets/Photon/
+HDproject/Assets/Settings/
+HDproject/Assets/Packages/
+HDproject/Assets/TutorialInfo/
+HDproject/Assets/Package.meta
+HDproject/Assets/Package/
+HDproject/Assets/TutorialInfo.meta
+HDproject/Assets/Settings.meta
+HDproject/Assets/Scenes/
+HDproject/Assets/Scenes.meta
+HDproject/Assets/Resources/
+HDproject/Assets/Resources.meta
+HDproject/Assets/Readme.asset.meta
+HDproject/Assets/Readme.asset
+HDproject/Assets/Photon.meta
+HDproject/Assets/InputSystem_Actions.inputactions.meta
+HDproject/Assets/InputSystem_Actions.inputactions
+HDproject/Assets/Firebase.meta
+HDproject/Assets/00_Scripts/PlayerController.cs.meta
+HDproject/Assets/01_Animations.meta
+HDproject/Assets/01_Animations/Animations.meta
+HDproject/Assets/01_Animations/Controller.meta
+HDproject/Assets/01_Animations/Controller/Player.controller
+HDproject/Assets/01_Animations/Controller/Player.controller.meta
+HDproject/Assets/ExternalDependencyManager.meta
+HDproject/Assets/00_Scripts/PhotonManager.cs.meta
+HDproject/Assets/00_Scripts/ChatManager.cs.meta
