--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ HDproject/Assets/01_Animations/Controller/Player.controller.meta
 HDproject/Assets/ExternalDependencyManager.meta
 HDproject/Assets/00_Scripts/PhotonManager.cs.meta
 HDproject/Assets/00_Scripts/ChatManager.cs.meta
+HDproject/Assets/TextMesh Pro/Shaders/TMPro_Mobile.cginc
