Feat. 파티 기능 선택 ui 스크립트 제작

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,26 @@ HDproject/Assets/01_Animations/Animations/SpeechBubble_Open.anim
 HDproject/Assets/01_Animations/Animations/SpeechBubble_Open.anim.meta
 HDproject/Assets/01_Animations/Controller/SpeechBubble.controller
 HDproject/Assets/01_Animations/Controller/SpeechBubble.controller.meta
+HDproject/Temp/01bf33010cd34ba188b7db6cfc091a5f.res
+HDproject/Temp/01bf33010cd34ba188b7db6cfc091a5f.resG
+HDproject/Temp/3f43c8770f065cc9715776bb7536c1c2.res
+HDproject/Temp/3f43c8770f065cc9715776bb7536c1c2.resG
+HDproject/Temp/490dfd1c7a63e97a750a4400ff3e3bc9.res
+HDproject/Temp/490dfd1c7a63e97a750a4400ff3e3bc9.resG
+HDproject/Temp/7730b2ddd381e9c383c7921886095785.res
+HDproject/Temp/7730b2ddd381e9c383c7921886095785.resG
+HDproject/Temp/7730b2ddd381e9c383c7921886095785.resS
+HDproject/Temp/__Backupscenes/0.backup
+HDproject/Temp/burst.link.xml
+HDproject/Temp/BurstOutput/Data/Plugins/x86_64/lib_burst_generated.dll
+HDproject/Temp/compute-shader-stripping.json
+HDproject/Temp/ea40309e3153970d5719afc0633abe4b.res
+HDproject/Temp/ea40309e3153970d5719afc0633abe4b.resG
+HDproject/Temp/ea40309e3153970d5719afc0633abe4b.resS
+HDproject/Temp/FSTimeGet-a41774ea05760714aa7ee64f096148f0
+HDproject/Temp/graphics-settings-stripping.json
+HDproject/Temp/PlayerBuildAnalyticsEvents.json
+HDproject/Temp/shader-stripping.json
+HDproject/Temp/StagingArea/WindowsPlayer.exe
+HDproject/Temp/UnityLockfile
+HDproject/Temp/workerlic
