Feat. 파티 팝업창 서버 연

--- a/.gitignore
+++ b/.gitignore
@@ -436,3 +436,4 @@ HDproject/Temp/Burst/burst-aotmomta9si.rmb/lib_burst_generated_part_da352d92cabf
 HDproject/Temp/FSTimeGet-6f12a64f13a8f0b4984f2d9e616c1a5e
 HDproject/Temp/FSTimeGet-92eba249648513144a0f47adeb2bc214
 HDproject/Temp/FSTimeGet-bba9d89aa125a3944b50e6c81623a031
+HDproject/Assets/00_Scripts/PopUPManager.cs.meta
