feat. Add PartyManager

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,16 @@ HDproject/Temp/shader-stripping.json
 HDproject/Temp/StagingArea/WindowsPlayer.exe
 HDproject/Temp/UnityLockfile
 HDproject/Temp/workerlic
+HDproject/Temp/FSTimeGet-5920abac062404744ba5051872bf4d52
+HDproject/Temp/FSTimeGet-9b657cd2d42d34a48a84607b45e31130
+HDproject/Temp/FSTimeGet-ba6e670ea99ecaf40a464b06f1a2f0e1
+HDproject/Assets/00_Scripts/Mng.meta
+HDproject/Assets/00_Scripts/Mng/ActionHolder.cs.meta
+HDproject/Assets/00_Scripts/Mng/BaseManager.cs.meta
+HDproject/Assets/00_Scripts/Mng/BubbleUIManager.cs.meta
+HDproject/Assets/00_Scripts/Mng/ChatManager.cs.meta
+HDproject/Assets/00_Scripts/Mng/ChatUIManager.cs.meta
+HDproject/Assets/00_Scripts/Mng/PartyManager.cs.meta
+HDproject/Assets/00_Scripts/Mng/PhotonManager.cs.meta
+HDproject/Assets/00_Scripts/Mng/PopUPManager.cs.meta
+HDproject/Assets/00_Scripts/Mng/RayManager.cs.meta
