TMPStyleApplier 기능 추가
backupStyle 추가
isPresetLocked 추가

기능	설명
Preset 적용 후 자동으로 Lock	- 덮어쓰기 방지
드래그할 때 Lock 체크 - 잠긴 경우 덮어쓰기 불가
적용 전 Backup 저장 - 실수 대비 복구 가능
Undo 지원	- 에디터 Undo에 기록
Auto-Apply 옵션 설정 가능 - 체크박스로 설정 가능

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,4 @@ HDproject/Temp/FSTimeGet-abe69fa26638c0b438fd2f0138f0053d
 HDproject/Assets/00_Scripts/EditorTool.meta
 HDproject/Assets/00_Scripts/EditorTool/TMPStyleApplier.cs.meta
 HDproject/Assets/00_Scripts/EditorTool/TMPStyleApplierEditor.cs.meta
+HDproject/Temp/FSTimeGet-95c2ff9d1937643419bae8246ecb0e8a
