--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,4 @@ HDproject/Assets/00_Scripts/EditorTool.meta
 HDproject/Assets/00_Scripts/EditorTool/TMPStyleApplier.cs.meta
 HDproject/Assets/00_Scripts/EditorTool/TMPStyleApplierEditor.cs.meta
 HDproject/Temp/FSTimeGet-95c2ff9d1937643419bae8246ecb0e8a
+HDproject/Temp/FSTimeGet-01c055e1f6f8bf74281a1fc298adb657
