TMPTextStyle Awake 오류 수정
Awake

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,6 @@ HDproject/Assets/00_Scripts/EditorTool/TMPStyleApplierEditor.cs.meta
 HDproject/Temp/FSTimeGet-95c2ff9d1937643419bae8246ecb0e8a
 HDproject/Temp/FSTimeGet-01c055e1f6f8bf74281a1fc298adb657
 HDproject/Temp/FSTimeGet-7775afc3944dfc04f9eba48bb7f6b947
+HDproject/Temp/FSTimeGet-336f98c4c873ef840b6407bfd07dd8ed
+HDproject/Temp/FSTimeGet-9bfda582126d635419e0698a4ac1cc87
+HDproject/Temp/FSTimeGet-dae2b92ea46a77d418f21f0c5028d405
