--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,28 @@ HDproject/Temp/FSTimeGet-7775afc3944dfc04f9eba48bb7f6b947
 HDproject/Temp/FSTimeGet-336f98c4c873ef840b6407bfd07dd8ed
 HDproject/Temp/FSTimeGet-9bfda582126d635419e0698a4ac1cc87
 HDproject/Temp/FSTimeGet-dae2b92ea46a77d418f21f0c5028d405
+HDproject/Assets/00_Scripts/Mng/ToastPopUPManager.cs.meta
+HDproject/Assets/00_Scripts/NPC.meta
+HDproject/Assets/00_Scripts/NPC/DialogueUI.cs.meta
+HDproject/Assets/00_Scripts/NPC/LocalLLMChatManager.cs.meta
+HDproject/Assets/00_Scripts/NPC/NPCInteraction.cs.meta
+HDproject/Assets/01_Animations/Animations/Toast_Hide.anim
+HDproject/Assets/01_Animations/Animations/Toast_Hide.anim.meta
+HDproject/Assets/01_Animations/Animations/Toast_Open.anim
+HDproject/Assets/01_Animations/Animations/Toast_Open.anim.meta
+HDproject/Assets/01_Animations/Controller/Toast.controller
+HDproject/Assets/01_Animations/Controller/Toast.controller.meta
+HDproject/Assets/02_Prefabs/\#InteractionUI.prefab
+HDproject/Assets/02_Prefabs/\#InteractionUI.prefab.meta
+HDproject/Assets/02_Prefabs/\#PopUP.prefab
+HDproject/Assets/02_Prefabs/\#PopUP.prefab.meta
+HDproject/Assets/02_Prefabs/\#ToastPopUp.prefab
+HDproject/Assets/02_Prefabs/\#ToastPopUp.prefab.meta
+HDproject/Assets/02_Prefabs/BubbleHolder.prefab
+HDproject/Assets/02_Prefabs/BubbleHolder.prefab.meta
+HDproject/Assets/02_Prefabs/ChatPanel.prefab
+HDproject/Assets/02_Prefabs/ChatPanel.prefab.meta
+HDproject/Assets/02_Prefabs/NPC.meta
+HDproject/Assets/02_Prefabs/NPC/NPC.prefab
+HDproject/Assets/02_Prefabs/NPC/NPC.prefab.meta
+HDproject/Temp/FSTimeGet-cb02abb31876f9147a086f3c64f978d9
