Feat. Update GoogleDTTemplate

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,29 @@ HDproject/ProjectSettings
 HDproject/Packages
 HDproject/Assets/TutorialInfo
 HDproject/Assets/Resources
+새 폴더/3D/Monster/monster_list.xlsx
+새 폴더/3D/Monster/SporeDredge/A_bloated_undead_dwar_0527024704_texture_fbx.zip
+새 폴더/3D/Monster/SporeDredge/biped.zip
+새 폴더/DT/Potion_Design_Guide.docx
+새 폴더/DT/Potion_Design_Guide_All_120.xlsx
+새 폴더/Font/king-battle-font.zip
+새 폴더/Font/king-battle-font/info.txt
+새 폴더/Font/king-battle-font/misc/DEMO - PERSONAL USE ONLY - CalligraphyFont net.txt
+새 폴더/Font/rumble-brave-font.zip
+새 폴더/Font/rumble-brave-font/info.txt
+새 폴더/Font/rumble-brave-font/misc/READ ME.txt
+새 폴더/Font/rumble-brave-font/Rumblebrave-Yw72.otf
+새 폴더/Quest/sWINNg9g8rOzQAXeANnL--0--92540.jpg
+Assets/Quest/sWINNg9g8rOzQAXeANnL--0--92540.jpg
+Assets/Font/rumble-brave-font/Rumblebrave-Yw72.otf
+Assets/Font/rumble-brave-font/misc/READ ME.txt
+Assets/Font/rumble-brave-font/info.txt
+Assets/Font/rumble-brave-font.zip
+Assets/Font/king-battle-font/misc/DEMO - PERSONAL USE ONLY - CalligraphyFont net.txt
+Assets/Font/king-battle-font/info.txt
+Assets/Font/king-battle-font.zip
+Assets/DT/Potion_Design_Guide_All_120.xlsx
+Assets/DT/Potion_Design_Guide.docx
+Assets/3D/Monster/SporeDredge/biped.zip
+Assets/3D/Monster/SporeDredge/A_bloated_undead_dwar_0527024704_texture_fbx.zip
+Assets/3D/Monster/monster_list.xlsx
